# graph-colouring

./: .gitignore  .gitmodules  README.md
bench/: bencher.g  bounds.g  example_graphs.g  run.g
notes/: 2021-01-06.md  2021-01-13.md  branch-and-bound.md
plotting/: Cargo.toml
plotting/src/: bench_data.rs  main.rs
src/: lawler.g
test/: all_graphs.g  test.g
