[package]
name = "plotting"
version = "0.1.0"
authors = ["EwanGilligan <ewan.gilligan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plotters = "^0.3.0"
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"]}
streaming-stats = "0.2"